--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Harry Potter | Social Media About Beagles</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
