Update to core pages
Update to index, contact, and about page and style.css

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="description" content="This page is the about page which contains an image and a short description of what this page is about ">
       <title>About-Audio Engineering Technology at the University of Hartford </title>
+      <link href="https://fonts.googleapis.com/css?family=Rubik&amp;display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text&ampdisplay=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/style.css">
    </head>
    <body>
