--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <meta name="description" content="This page is the contact page which contains an Rahman Chambers' contact information including his phone number, email address, and social media along with a link to the home page">
    <title>Contact- Audio Engineering with Rahman Chambers</title>
+   <link href="https://fonts.googleapis.com/css?family=Rubik&amp;display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text&ampdisplay=swap" rel="stylesheet">
    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
