--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <meta name="description" content="Core information about Rahman Chambers and his experience in the Audio Engineering Major at the University of Hartford ">
-   <title>Index-Audio Engineering specialized for future producers, Free Training </title>
-   <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
+   <title>Index-Audio Engineering specialized for future producers & technicians at the University of Hartford, </title>
+   <link href="https://fonts.googleapis.com/css?family=Rubik&amp;display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text&ampdisplay=swap" rel="stylesheet">
    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
    <main>
       <header>
-         <h1>Importing External CSS</h1>
+         <h1>Audio Engineering</h1>
       </header>
       <nav>
          <ul>
@@ -26,10 +26,10 @@
             <li>Index</li>
          </ul>
       </nav>
-      <img src="Heroimage.jpg" width="900" alt="HeroImage">
+      <img src="img/heroimageprpr.jpg" height="700" width="1400" alt="HeroImage">
       <p>My name is Rahman Chambers and i am enrolled in the Audio Engingeering Technology program here at the Universtity of Hartford. Click
          <a href="about.html"> about</a>
-         to read more on the ins and outs of the Audio Engineering major.
+         to read more on the intricacies of the Audio Engineering major.
       </p>
    </main>
 </body>
