--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     </ul>
   </nav>
   <main>
-    <p>Interested in learning more about Beagles or just looking for some adorable dog pics? Check out</p>
+    <p><span id="compress">Interested in learning more about Beagles or just looking for some adorable dog pics? Check out</span></p>
     <ul>
       <li><a href="https://twitter.com/beaglefacts" target="_blank" rel="noopener">Beagle Facts on Twitter @beaglefacts</a></li>
       <li><a href="https://www.instagram.com/instagrambeagles/" target="_blank" rel="noopener">instagrambeagles on Instagram</a></li>
