--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
     </ul>
   </nav>
   <main>
-    <p><span id="compress">Interested in learning more about Beagles or just looking for some adorable dog pics? Check out</span></p>
-    <ul>
+    <p id="compress">Interested in learning more about Beagles or just looking for some adorable dog pics? Check out</p>
+    <ul id="list-style">
       <li><a href="https://twitter.com/beaglefacts" target="_blank" rel="noopener">Beagle Facts on Twitter @beaglefacts</a></li>
       <li><a href="https://www.instagram.com/instagrambeagles/" target="_blank" rel="noopener">instagrambeagles on Instagram</a></li>
     </ul>
