--- a/about.html
+++ b/about.html
@@ -5,31 +5,6 @@
    <meta name="details" content="In this page I give more details about me">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>About</title>
-      <style>
-h1 , h2 {
-               text-align: center;
-         }
-h1 {
-      background-color: #F0466E;
-      padding: 20px;
-      margin: 5px;
-   }
-
-h2 {
-      background-color: #E29C56;
-      padding: 5px;
-      margin: 0px;
-   }
-
-   ul {
-      margin: auto;
-      background-color: #E29C56;
-      }
-div {
-   background-color: #73E9AE;
-   padding:5px;
-}
-      </style>
    </head>
 <body>
       <h2>Navigation</h2>
@@ -43,6 +18,7 @@ div {
 
    <div>
       <h3>More About Me</h3>
+      <img src="img/IMG_0650.jpg" alt="">
       <p>Going back to my interest about cars, I've been a fan of motorsport from a young age. I had a little Porsche Carrera GT toy, so I started following Porsche's racing teams around the world, and then I found out they used to make engines for Formula One teams. I took an interest for Formula One a couple years ago and now I watch the races during the weekends. My favorite team is Scuderia Ferrari but I also root for Red Bull Racing since I'm also a Honda fan, and they supply engines to Red Bull. I hope one day to attend a Formula One race to see how those cars are driven around the track at very high speeds, and maybe get a closer look at the cars during practice sessions. </p>
       <p>My other major interest is mixing music. My uncle used to teach me and my cousins how to use dj equipment and software. Ever since I was taught how to mix, I've never stopped liking it because it's something really fun to do, and being able to perform at my uncle's nightclubs became a very fun activity to do every time I visited them back in Ecuador. I'm currently saving money to buy myself a professional deck for djing, and hope to become a part time dj during the summer. </p>
 
