--- a/index.html
+++ b/index.html
@@ -5,39 +5,6 @@
    <meta name="description" content="This page is about my personal informartion and includes some links to my social pages">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Angel's Main Page</title>
-   <style>
-h1 , h2 {
-   text-align: center;
-   }
-
-h1 {
-   background-color: #F0466E;
-   padding: 20px;
-   margin: 5px;
-   }
-
-h2 {
-   background-color: #A56CE6;
-   padding: 5px;
-   margin: 0px;
-   }
-
-.item img {
-      width: 30%
-         }
-
-div {
-      text-align: center;
-      background-color: #6485E2;
-      padding : 5px;
-   }
-
-ul {
-   margin: auto;
-   background-color: #A56CE6;
-   }
-
-   </style>
 </head>
 <body>
    <header>
@@ -55,7 +22,7 @@ ul {
 
       <div class="item page">
          <h3>About Me</h3>
-      <img src="img/IMG_0650.jpg" alt="">
+      <img src="img/6382330083_acbda2b5f4_k.jpg" alt="">
       <p> My name is Angel Sanango, I study at University of Hartford where I'm majoring in Electronics and Computer Engineering. For the past nine years I've lived in the town of New Milford, CT, but I'm originally from Ecuador where I spent most of my childhood. Most of my hobbies include researching about cars, using dj software for music mixing, playing sports, and I play videogames. Cars are fascinating to me and my dream is to work for a racing team involved in Formula One racing. I'm also a big fan of all types of music. I come from a family who is dedicated to djing and my uncle owns nightclubs where I learned to use mixing software, and to this day I never get bored of taking my laptop out to play music whenever I want to. </p>
       </div>
    </main>
