hero image corrections
deleted unecessary img files , added a new hero image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li>Index</li>
          </ul>
       </nav>
-      <img src="img/heroimageprpr.jpg" height="700" width="1400" alt="HeroImage">
+      <img src="img/Landscape.jpg" height="350" width="1400" alt="HeroImage">
       <p>My name is Rahman Chambers and i am enrolled in the Audio Engingeering Technology program here at the Universtity of Hartford. Click
          <a href="about.html"> about</a>
          to read more on the intricacies of the Audio Engineering major.
