updated the bio on the about page
update to the about page

--- a/about.html
+++ b/about.html
@@ -29,11 +29,11 @@
       <p> Audio Engineering Technology is an intensive program that gears itself towards the creative ears within the college of Engineering, Technology and Architecture. With their core emphasis on electronics and ciruitry, the major sets its students up to enter a malnourished job market that yearns for fresh minds with an extensive knowledge on the ins and outs of the devices we work with on a daily basis.
       </p>
 
-      <p> Everday we partake in a handful of electronics classes which which allows us to dive into the inner mechanisms of the technology that high end producers and engineers work with on a daily basis.
+      <p> Everday we partake in a handful of electronics classes which which allows us to dive into the inner mechanishions of the technology that producers and engineers work with. We believe that by organizing the student work load with
       </p>
-      <p>By the end of the first week you will have experience with:</p>
+      <p>By the end of the first week as a First- Year Freshman you will be able to fluently explicate the innadrs of the following devices:</p>
       <ul>
-         <li>Amplifiers</li>
+         <li>Operational Amplifiers</li>
          <li>Transducers</li>
          <li>Compressors</li>
       </ul>
