added a link to the css page called style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Michael Haughton - CEET Major</title>
   <meta name="description" content="This is the index page , it is the home page of my website it has a introduction and a picture of me.">
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:700i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Jomolhari&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
