Minor homepage changes
Changed background image to appropriate "hero" image (thus the hero background) & changed colors to match.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                <li><a href="contact.html">Contact</a></li>
             </ul>
          </nav>
-              <div id="hero"><img src="img/hero.jpg" alt="heroImage"></div>
+              <div id="hero"><img src="img/hero.png" alt="heroImage"></div>
       </header>
             <h1>Mahtii AKA David Jurich</h1>
       <main>
