Updated Index page
Updated hero image properties to fit properly, and made minor tweaks to other pages design content.

--- a/index.html
+++ b/index.html
@@ -7,22 +7,25 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Homepage | Mahtii's Portfolio</title>
    <link rel="stylesheet" href="css/style.css">
-
 </head>
    <body>
       <header>
-         <nav class="Navbar">
+         <nav class="navbar">
             <ul>
                <li><a href="index.html">Home</a></li>
                <li><a href="about.html">About</a></li>
                <li><a href="contact.html">Contact</a></li>
             </ul>
          </nav>
+            <h1>Mahtii AKA David Jurich</h1>
               <div id="hero"><img src="img/hero.png" alt="heroImage"></div>
       </header>
-            <h1>Mahtii AKA David Jurich</h1>
       <main>
          <h2>David Jurich, also known as <i>Mahtii</i>, is a New York City raised Web-Developer.</h2>
+
+            <p>If you would like to learn more about Mahtii, please click
+               <a href="about.html">me.</a>
+            <p>
       </main>
 </body>
 </html>
