Finished site (for now) -- David Jurich
Updated all pages completely, fixed up color-scheme and fixed small issues.

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       </nav>
    </header>
       <h1>Who is Mahtii?</h1>
-      <img src="img/mahtii.png" alt="Photo of Mahtii">
+      <img src="img/mahtii.png" height= "400" width="600" alt="Photo of Mahtii">
 <main>
    <p>
          David Jurich, also known online as Mahtii, started in the world of the Computing Sciences when he built his own custom PC desktop at the age of 12. From then, his constant interest in gaming led him to explore the underlying code aspect of the games (and therefore create altered versions/cheats) Currently seeking employment.
