--- a/contact.html
+++ b/contact.html
@@ -19,12 +19,15 @@
             </ul>
          </nav>
             <header>
-               <p> Mahtii's Social Media </p>
+               <h1> Mahtii's Social Media </h1>
             </header>
             <main>
-            <a href="mailto:jurich@hartford.edu">Email</a>
-            <br>
-            <a href="https://www.instagram.com/davidjurich">Instagram</a>
+               <p>For the best means of ensuring a response email is prefered.</p>
+               <p>
+                  <a href="mailto:jurich@hartford.edu">Email</a>
+                  <br>
+                  <a href="https://www.instagram.com/davidjurich">Instagram</a>
+               <p>
          </main>
    </body>
 </html>
