--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <div id="hero"><img src="img/hero.png" alt="heroImage"></div>
       </header>
       <main>
-         <h2>David Jurich, also known as <i>Mahtii</i>, is a New York City raised Web-Developer.</h2>
+         <h2>David Jurich, also known as "Mahtii", is a New York City raised Web-Developer.</h2>
 
             <p>If you would like to learn more about Mahtii, please click
                <a href="about.html">me.</a>
