--- a/about.html
+++ b/about.html
@@ -3,15 +3,18 @@
 <head>
    <meta charset="UTF-8">
    <meta name="details" content="In this page I give more details about me">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
    <title>About</title>
+   <link href="https://fonts.googleapis.com/css?family=Oswald&amp;display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed&amp;display=swap" rel="stylesheet">
+   <link href="css/style.css" rel="stylesheet">
    </head>
 <body>
       <h2>Navigation</h2>
    <nav>
       <ul>
          <li><a href="index.html">Home Page</a></li>
-         <li>About</li>
+         <li><a href="about.html">About</a></li>
          <li><a href="contact.html">Contact</a></li>
       </ul>
    </nav>
