--- a/contact.html
+++ b/contact.html
@@ -3,31 +3,33 @@
 <head>
    <meta charset="UTF-8">
    <meta name="contact" content="This page containst some contact info about me">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
    <title>My Contact Info</title>
+   <link href="https://fonts.googleapis.com/css?family=Oswald&amp;display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed&amp;display=swap" rel="stylesheet">
+   <link href="css/style.css" rel="stylesheet">
+
 </head>
 <body>
    <header>
       <h1>Links to my Personal Social Media</h1>
    </header>
    <main>
-      <div>
+
          <h2>Navigation</h2>
       <nav>
          <ul>
-            <li><a href="index.html">Home Page</a></li>
-            <li><a href="about.html">About</a></li>
-            <li>Contact</li>
+            <li><a href="index.html">Home Page</a></li><li><a href="about.html">About</a></li><li><a href="contact.html">Contact</a></li>
          </ul>
       </nav>
-   </div>
-      <div>
+
+<nav>
    <ol>
       <li><a href="https://www.facebook.com/AngelS394" target="_blank">My Facebook Page</a></li>
       <li><a href="https://www.instagram.com/angel_avraam/" target="_blank">My Instagram Page</a></li>
       <li><a href="mailto:angel.abraham304@gmail.com?subject=feedback">My Email</a></li>
    </ol>
-      </div>
+</nav>
 
    </main>
 </body>
