--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
    <meta charset="UTF-8">
    <meta name="description" content="This page is about my personal informartion and includes some links to my social pages">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Angel's Main Page</title>
+   <link href="https://fonts.googleapis.com/css?family=Oswald&amp;display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed&amp;display=swap" rel="stylesheet">
+   <link href="css/style.css" rel="stylesheet">
+
 </head>
 <body>
    <header>
@@ -14,9 +17,7 @@
       <h2>Navigation</h2>
       <nav>
          <ul>
-            <li>Home Page</li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li><li><a href="about.html">About</a></li><li><a href="contact.html">Contact</a></li>
          </ul>
       </nav>
 
